# atriade_ws

./: Dockerfile  pyproject.toml
app/: main.py
app/ai/prompts/: human_prompt.py  system_prompt.py
app/ai/structured_outputs/: stocks_analyze_response.py
app/api/v1/: stocks.py
app/core/: settings.py
app/schemas/: stocks.py
app/services/: finance.py  news.py  openai.py
